Add links to posts

--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
         <hr>
         <div>
             <ul reversed="" class="">
-                <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                <!-- <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a>
+                </li> -->
+                <li>
+                    <a class=""
+                        href=https://github.com/erdemuysalx/thoughts/blob/main/content/posts/2019-07-06_ARM-Architecture-II--Introduction-to-Command-Sets-d2be28deb968.md
+                        title="ARM Architecture II: Introduction to Command Sets">ARM Architecture II: Introduction to
+                        Command Sets</a>
                 </li>
-                <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a>
+                <li><a class=""
+                        href=https://github.com/erdemuysalx/thoughts/blob/main/content/posts/2019-01-24_Installing-IDE-s-for-Developing--ARM-Keil---Code-Composer-Studio-d0dcb069ff74
+                        title="Installing IDEs for Developing; ARM Keil & Code Composer Studio">Installing IDEs for
+                        Developing; ARM Keil & Code Composer Studio</a>
                 </li>
-                <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a>
-                </li>
-                <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a>
+                <li><a class=""
+                        href=https://github.com/erdemuysalx/thoughts/blob/main/content/posts/2019-01-24_ARM-Architecture-I-174ec191d939
+                        title="ARM Architecture">ARM Architecture I</a>
                 </li>
             </ul>
         </div>
