Add other posts

--- a/index.html
+++ b/index.html
@@ -23,10 +23,50 @@
         <hr>
         <div>
             <ul reversed class="">
-                <!-- <li><a class="" href="" title="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a>
+                <!-- <li>
+                    <a class="" href="" title=""></a>
                 </li> -->
+                <!-- <li>
+                    <a class="" href=https://erdemuysalx.github.io/ title="Robotics III: ROS Navigation Stack">Robotics III: ROS Navigation Stack</a>
+                </li>
+                <li>
+                    <a class="" href=https://erdemuysalx.github.io/ title="Robotics II: ROS File System">Robotics II: ROS File System</a>
+                </li> -->
+                <a class=""
+                    href=https://erdemuysalx.github.io/thoughts/content/posts/2022-01-27_Robotics-I--ROS-in-a-Nutshell-c36c27acebe7.md
+                    title="Robotics I: ROS in a Nutshell">Robotics I: ROS in a Nutshell</a>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-18_Linux-Process-Isolation-and-Docker-Containers-1d134ebb796c.md
+                        title="Linux Process Isolation and Docker Containers">Linux Process Isolation and Docker
+                        Containers</a>
+                </li>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-12_What-are-Real-Time-System-and-Real-Time-Operating-System--6cf2caf7042e.md
+                        title="What are Real-Time System and Real-Time Operating System?">What are Real-Time System and
+                        Real-Time Operating System?</a>
+                </li>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-04-03_Music-Generation-with-LSTM-Based-RNN-3fa967bc1f37.md
+                        title="Music Generation with LSTM Based RNN">Music Generation with LSTM Based RNN</a>
+                </li>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-05-21_Machine-Learning--Key-Terminology-b03ec15329e3.md
+                        title="Machine Learning: Key Terminology">Machine Learning: Key Terminology</a>
+                </li>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-04-22_Why-Python-instead-of-Matlab-and-R--c00a5554f125.md
+                        title="Why Python instead of Matlab and R?">Why Python instead of Matlab and R?</a>
+                </li>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-07_The-rise-of-AI--What-is-AI--d3f796a1c153.md
+                        title="The rise of AI; What is AI?">The rise of AI; What is AI? </a>
+                </li>
                 <li>
                     <a class=""
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-06_ARM-Architecture-II--Introduction-to-Command-Sets-d2be28deb968
@@ -34,7 +74,7 @@
                         Command Sets</a>
                 </li>
                 <li><a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/posts/2019-01-24_Installing-IDE-s-for-Developing--ARM-Keil---Code-Composer-Studio-d0dcb069ff74
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2019-01-24_Installing-IDE-s-for-Developing--ARM-Keil---Code-Composer-Studio-d0dcb069ff74
                         title="Installing IDEs for Developing; ARM Keil & Code Composer Studio">Installing IDEs for
                         Developing; ARM Keil & Code Composer Studio</a>
                 </li>
