--- a/index.html
+++ b/index.html
@@ -32,39 +32,40 @@
                 <li>
                     <a class="" href=https://erdemuysalx.github.io/ title="Robotics II: ROS File System">Robotics II: ROS File System</a>
                 </li> -->
-                <a class=""
-                    href=https://erdemuysalx.github.io/thoughts/content/posts/2022-01-27_Robotics-I--ROS-in-a-Nutshell-c36c27acebe7.md
-                    title="Robotics I: ROS in a Nutshell">Robotics I: ROS in a Nutshell</a>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-18_Linux-Process-Isolation-and-Docker-Containers-1d134ebb796c.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2022-01-27_Robotics-I--ROS-in-a-Nutshell-c36c27acebe7
+                        title="Robotics I: ROS in a Nutshell">Robotics I: ROS in a Nutshell</a>
+                <li>
+                    <a class=""
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-18_Linux-Process-Isolation-and-Docker-Containers-1d134ebb796c
                         title="Linux Process Isolation and Docker Containers">Linux Process Isolation and Docker
                         Containers</a>
                 </li>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-12_What-are-Real-Time-System-and-Real-Time-Operating-System--6cf2caf7042e.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-12_What-are-Real-Time-System-and-Real-Time-Operating-System--6cf2caf7042e
                         title="What are Real-Time System and Real-Time Operating System?">What are Real-Time System and
                         Real-Time Operating System?</a>
                 </li>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-04-03_Music-Generation-with-LSTM-Based-RNN-3fa967bc1f37.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2021-04-03_Music-Generation-with-LSTM-Based-RNN-3fa967bc1f37
                         title="Music Generation with LSTM Based RNN">Music Generation with LSTM Based RNN</a>
                 </li>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-05-21_Machine-Learning--Key-Terminology-b03ec15329e3.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-05-21_Machine-Learning--Key-Terminology-b03ec15329e3
                         title="Machine Learning: Key Terminology">Machine Learning: Key Terminology</a>
                 </li>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-04-22_Why-Python-instead-of-Matlab-and-R--c00a5554f125.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2020-04-22_Why-Python-instead-of-Matlab-and-R--c00a5554f125
                         title="Why Python instead of Matlab and R?">Why Python instead of Matlab and R?</a>
                 </li>
                 <li>
                     <a class=""
-                        href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-07_The-rise-of-AI--What-is-AI--d3f796a1c153.md
+                        href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-07_The-rise-of-AI--What-is-AI--d3f796a1c153
                         title="The rise of AI; What is AI?">The rise of AI; What is AI? </a>
                 </li>
                 <li>
