--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <div class="">
+    <div class="content">
         <header>
-            <p><a href="https://erdemuysalx.github.io/thoughts"><b>REU | thoughts</b></a></p>
-            <ul>
-                <li>
+            <p style=padding:0;margin:0><a href="https://erdemuysalx.github.io/thoughts"><b>REU | thoughts</b></a></p>
+            <ul style=padding:0;margin:0>
+                <li style=padding:0;margin:0>
                     <a href="https://erdemuysalx.github.io">About</a>
                 </li>
             </ul>
         </header>
-        <hr>
+        <hr class=hr-list style=padding:0;margin:0>
         <div>
-            <ul reversed class="">
+            <ul reversed class="list">
                 <!-- <li>
                     <a class="" href="" title=""></a>
                 </li> -->
@@ -33,55 +33,65 @@
                     <a class="" href=https://erdemuysalx.github.io/ title="Robotics II: ROS File System">Robotics II: ROS File System</a>
                 </li> -->
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2022-01-27_Robotics-I--ROS-in-a-Nutshell-c36c27acebe7
                         title="Robotics I: ROS in a Nutshell">Robotics I: ROS in a Nutshell</a>
+                        <hr class=hr-list>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-18_Linux-Process-Isolation-and-Docker-Containers-1d134ebb796c
                         title="Linux Process Isolation and Docker Containers">Linux Process Isolation and Docker
                         Containers</a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2021-09-12_What-are-Real-Time-System-and-Real-Time-Operating-System--6cf2caf7042e
                         title="What are Real-Time System and Real-Time Operating System?">What are Real-Time System and
                         Real-Time Operating System?</a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2021-04-03_Music-Generation-with-LSTM-Based-RNN-3fa967bc1f37
                         title="Music Generation with LSTM Based RNN">Music Generation with LSTM Based RNN</a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2020-05-21_Machine-Learning--Key-Terminology-b03ec15329e3
                         title="Machine Learning: Key Terminology">Machine Learning: Key Terminology</a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2020-04-22_Why-Python-instead-of-Matlab-and-R--c00a5554f125
                         title="Why Python instead of Matlab and R?">Why Python instead of Matlab and R?</a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-07_The-rise-of-AI--What-is-AI--d3f796a1c153
                         title="The rise of AI; What is AI?">The rise of AI; What is AI? </a>
+                        <hr class=hr-list>
                 </li>
                 <li>
-                    <a class=""
+                    <a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2019-07-06_ARM-Architecture-II--Introduction-to-Command-Sets-d2be28deb968
                         title="ARM Architecture II: Introduction to Command Sets">ARM Architecture II: Introduction to
                         Command Sets</a>
+                        <hr class=hr-list>
                 </li>
-                <li><a class=""
+                <li><a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2019-01-24_Installing-IDE-s-for-Developing--ARM-Keil---Code-Composer-Studio-d0dcb069ff74
                         title="Installing IDEs for Developing; ARM Keil & Code Composer Studio">Installing IDEs for
                         Developing; ARM Keil & Code Composer Studio</a>
+                        <hr class=hr-list>
                 </li>
-                <li><a class=""
+                <li><a class="link"
                         href=https://erdemuysalx.github.io/thoughts/content/posts/2019-01-24_ARM-Architecture-I-174ec191d939
                         title="ARM Architecture">ARM Architecture I</a>
+                        <hr class=hr-list>
                 </li>
             </ul>
         </div>
